<resources>
    <string name="app_name" translatable="false">BBB</string>
    <string name="language">Language</string>
    <string name="color_blind_mode">Color-blind mode</string>
    <string name="textsize">Textsize</string>
    <string name="map">Map</string>
    <string name="locations">Locations</string>
    <string name="settings">Settings</string>
    <string name="read_more">read more...</string>
    <string name="show_on_map">Show on map</string>
    <string name="show_video">Show video</string>
    <string name="fragment_poi">POI</string>
    <string name="search">Search...</string>
    <string name="fragment_statistics">Statistics</string>
    <string name="distance">Distance: </string>
    <string name="routes">Routes: </string>
    <string name="help">Help</string>
    <string name="ok">Ok</string>
    <string name="route_information">Route information</string>
    <string name="stop">Stop</string>
    <string name="name">Name</string>
    <string name="amount_pois">"Amount POI's: "</string>
    <string name="date">Date</string>
    <string name="show_points">show points...</string>
    <string name="route">Route: </string>
    <string name="heading_to">Heading to: </string>
    <string name="last_poi">Last POI: </string>
    <string name="progress">Progress: </string>
    <string name="select_a_route">Select a Route</string>
    <string name="loading_route">Loading route...</string>
    <string name="please_select_a_route">Please select a route!</string>
    <string name="hide_video">Hide video</string>
    <string name="dutch" translatable="false">Nederlands</string>
    <string name="english" translatable="false">English</string>
    <string name="french" translatable="false">Français</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="explanation">It is easy to walk different routes through cities with Begeleid Buddy Breda(BBB).\n
                               The main screen shows the map with your current location.\n
                                If a route is chosen at the top, it will be shown on the map, in addition, you can click on the button in the top left corner for more information about the route.\n
                                You can also find your walked routes by clicking on the button at the top right.\n
                                The round button at the bottom right will center the map back to your current location.\n
                                If you press the "locations" button you will see the different locations(POI’s) of the current route, or all locations(POI’s) if no route is selected.\n
                                By clicking on an item from the list of locations it is possible to find more information about this location.\n
                                You can also go to settings to enter your preference for language and font size, and enable a color blind mode if necessary.</string>
    <string name="fragment_settings">Settings</string>
    <string name="poi_list_size" translatable="false">POI list size</string>
</resources>