<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/userRoute_list_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lato_black"
        android:text="@string/name"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userRoute_list_item_AmountPOI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/userRoute_list_item_name"
        app:layout_constraintStart_toStartOf="@id/userRoute_list_item_name"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/lato_black"
        android:textSize="17sp"
        android:text="@string/amount_pois"/>

    <TextView
        android:id="@+id/userRoute_list_item_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/lato_black"
        android:text="@string/date"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/userRoute_list_item_name"
        app:layout_constraintTop_toBottomOf="@id/userRoute_list_item_AmountPOI"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/lato_black"
        android:text="@string/show_points"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userRoute_list_item_Date" />

    <TextView
        android:id="@+id/userRoute_list_item_AmountPOIint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/poi_list_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/userRoute_list_item_AmountPOI"
        app:layout_constraintTop_toBottomOf="@+id/userRoute_list_item_name" />
</androidx.constraintlayout.widget.ConstraintLayout>