<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/popup"
            android:divider="@color/SpanishGray"
            android:dividerPadding="10dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/textViewHelpTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/lato_black"
                android:gravity="center"
                android:text="@string/help"
                android:textColor="@color/black"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/textViewHelpText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/explanation"
                android:textAlignment="center" />

            <Button
                android:id="@+id/buttonHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/StarCommandBlue"
                android:fontFamily="@font/lato_black"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="@color/white" />
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>